# redline-bench

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml  outrider-daily.yml  outrider.yml
.remyx/: repo_intel.yaml
docs/: BENCHMARK-DESIGN.md  EVALUATION.md  GUIDE.md  REPORT-METRICS.md  REPRODUCING.md
schemas/: README.md  grade.schema.json  prediction.schema.json  task.schema.json
skills/contract-redliner/: SKILL.md
skills/contract-redliner/references/: anchors.md
skills/contract-redliner/scripts/: add_comment.py  mark_reserved.py  propose_edits.py  read_document.py
skills/contract-redliner/scripts/redline_engine/: anchoring.py  comments.py  document.py  ooxml_utils.py  ops.py  reserved.py
src/: README.md  aggregate.py  audit_reader.py  build_report_html.py  continuous_verifier.py  dataset.py  docx_metrics.py  judge_audit.py  judge_calibration.py  judge_confusion.py  judge_reliability.py  judging.py  metrics_summary.py  panel.py  panel_reader.py  rejudge.py  reliability_consensus.py  report_metrics.py  reproduce.py  runs_reader.py  severity.py
tests/: test_audit_reader.py  test_continuous_verifier.py  test_dataset_resolver.py  test_judge_audit.py  test_judge_calibration.py  test_judge_reliability.py  test_panel_confusion.py  test_reliability_consensus.py  test_severity.py  test_smoke_imports.py
